--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </nav>
             <section id="persegiSection" class="calculator">
                 <h2>Luas Persegi</h2>
-                <img src="persegi.png" alt="Gambar Persegi">
+                <img src="images\persegi.png" alt="Gambar Persegi">
                 <p>Rumus Luas Persegi yaitu:</p>
                 <p><b>L = S x S</b></p>
                 <p>Di mana:<br> L = Luas<br> S = Sisi</p>
@@ -45,7 +45,7 @@
             </section>
             <section id="kelilingPersegi" class="calculator">
                 <h2>Keliling Persegi</h2>
-                <img src="persegi.png" alt="Gambar Persegi">
+                <img src="images\persegi.png" alt="Gambar Persegi">
                 <p>Rumus Keliling Persegi yaitu:</p>
                 <p><b>K = 4 x S</b></p>
                 <p>Di mana:<br> K = Keliling<br> S = Sisi</p>
@@ -56,7 +56,7 @@
             </section>
             <section id="persegiPanjangSection" class="calculator">
                 <h2>Luas Persegi Panjang</h2>
-                <img src="persegi panjang.png" alt="Gambar Persegi Panjang">
+                <img src="images\persegi panjang.png" alt="Gambar Persegi Panjang">
                 <p>Rumus Luas Persegi Panjang yaitu:</p>
                 <p><b>L = P x L</b></p>
                 <p>Di mana: <br> L = Luas <br> P = Panjang <br> L = Lebar</p>
@@ -70,7 +70,7 @@
             </section>
             <section id="kelilingPersegiPanjang" class="calculator">
                 <h2>Keliling Persegi Panjang</h2>
-                <img src="persegi panjang.png" alt="Gambar Persegi Panjang">
+                <img src="images\persegi panjang.png" alt="Gambar Persegi Panjang">
                 <p>Rumus Keliling Persegi Panjang yaitu:</p>
                 <p><b>K = 2 x (P + L)</b></p>
                 <p>Di mana: <br> K = Keliling <br> P = Panjang <br> L = Lebar</p>
